# rtc-flutter-plugin

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/im/youme/youmertcengine/: RTCService.java  VideoRendererManager.java  VideoResolution.java  YoumeRenderManager.java  YoumeRenderViewFactory.java  YoumeRendererView.java  YoumeRtcEnginePlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/im/youme/youmertcengine_example/: MainActivity.java
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: youme_rtc_engine.podspec
ios/Classes/: YoumeConst.h  YoumeConst.m  YoumeRtcEnginePlugin.h  YoumeRtcEnginePlugin.m
lib/: youme_rtc_engine.dart
macos/: youme_rtc_engine.podspec
macos/Classes/: YoumeRtcEnginePlugin.swift
test/: youme_rtc_engine_test.dart
windows/: .gitignore  CMakeLists.txt  youme_rtc_engine_plugin.cpp
windows/cmake/: DownloadSDK.cmake
windows/include/youme_rtc_engine/: youme_rtc_engine_plugin.h
